--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -9,16 +9,14 @@
 }
 
 html {
-  font-size: 10px;
-  line-height: 1;
   width: 100%;
   height: 100%;
-  color: #121212;
+  color: #001aff;
   text-wrap: balance;
 }
 
 h1 {
-  color: #000;
+  color: #001aff;
   font-size: 80px;
   font-style: normal;
   font-weight: 670;
@@ -50,7 +48,6 @@ p {
 }
 
 body {
-  color: #111111;
   font-family: "Saans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -60,17 +57,10 @@ body {
 }
 
 .vid {
-  height: auto;
+  height: 570px;
   width: 100%;
   max-height: 570px;
   max-width: 300px;
-  border-radius: 0 0 16px 16px;
-  box-shadow: 0px 5.479px 3.223px 0px rgba(0, 0, 0, 0.01),
-    0px 13.167px 7.743px 0px rgba(0, 0, 0, 0.02),
-    0px 24.793px 14.355px 0px rgba(0, 0, 0, 0.03),
-    0px 44.226px 24.818px 0px rgba(0, 0, 0, 0.04),
-    0px 82.72px 44.312px 0px rgba(0, 0, 0, 0.05),
-    0px 198px 96px 0px rgba(0, 0, 0, 0.07);
 }
 
 @media (max-width: 768px) {
@@ -81,26 +71,52 @@ body {
 
 .link {
   display: inline-flex;
-  padding: 8px 16px;
+  padding: 7px 16px 6px 16px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  border-radius: 4px;
-  border: 1px solid #121212;
   font-size: 11px;
   font-style: normal;
   font-weight: 570;
   line-height: normal;
   letter-spacing: 1.32px;
-  transition: box-shadow 0.075s ease-out;
+  text-align: center;
 }
 
 .link:hover {
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.59) inset,
-    0px 7px 7px 0px rgba(0, 0, 0, 0.51) inset,
-    0px 16px 10px 0px rgba(0, 0, 0, 0.3) inset,
-    0px 29px 12px 0px rgba(0, 0, 0, 0.09) inset,
-    0px 45px 13px 0px rgba(0, 0, 0, 0.01) inset;
+  background: rgba(0, 26, 255, 0.1);
+  backdrop-filter: blur(1px);
+}
+.tooltip {
+  position: fixed;
+  padding: 8px;
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none; /* Make sure tooltip doesn't block your clicks */
+  z-index: 1000; /* Ensure tooltip is above other content */
+}
+
+.active {
+  background: rgba(0, 26, 255, 0.8) !important;
+  backdrop-filter: blur(1px);
+  color: #ffffff;
+}
+
+.no-round {
+  border-radius: 0;
+}
+
+.no-round-right {
+  border-radius: 4px 0 0 4px;
+  border-right: 0px;
+}
+
+.no-round-left {
+  border-radius: 0px 4px 4px 0px;
+  border-left: 0px;
 }
 
 .imagelink {
@@ -112,16 +128,24 @@ body {
   align-items: center;
   flex-shrink: 0;
   border-radius: 4px;
-  border: 1px solid #121212;
+  border: 1px solid #001aff;
   transition: box-shadow 0.075s ease-out;
 }
 
 .imagelink:hover {
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.59) inset,
-    0px 7px 7px 0px rgba(0, 0, 0, 0.51) inset,
-    0px 16px 10px 0px rgba(0, 0, 0, 0.3) inset,
-    0px 29px 12px 0px rgba(0, 0, 0, 0.09) inset,
-    0px 45px 13px 0px rgba(0, 0, 0, 0.01) inset;
+  box-shadow: 0px 2px 4px 0px rgba(0, 26, 255, 0.59) inset,
+    0px 7px 7px 0px rgba(0, 26, 255, 0.51) inset,
+    0px 16px 10px 0px rgba(0, 26, 255, 0.3) inset,
+    0px 29px 12px 0px rgba(0, 26, 255, 0.09) inset,
+    0px 45px 13px 0px rgba(0, 26, 255, 0.01) inset;
+}
+
+.toggle {
+  box-shadow: 0px 2px 4px 0px rgba(0, 26, 255, 0.59) inset,
+    0px 7px 7px 0px rgba(0, 26, 255, 0.51) inset,
+    0px 16px 10px 0px rgba(0, 26, 255, 0.3) inset,
+    0px 29px 12px 0px rgba(0, 26, 255, 0.09) inset,
+    0px 45px 13px 0px rgba(0, 26, 255, 0.01) inset;
 }
 
 .email img {
@@ -134,24 +158,96 @@ body {
   height: 18px;
 }
 
-.relativevideos {
+.video-container {
   position: relative;
-  height: 570px;
-  width: 300px;
+  height: 100%;
 }
 
-.relativevideos * {
+.secondary-tabs {
+  display: none;
+}
+
+.video-container:hover .secondary-tabs {
+  display: block;
+}
+
+.video {
   position: absolute;
   left: 0;
   top: 0;
 }
 
+.video {
+  /*transition: opacity 0.5s ease;*/
+  display: none; /* Videos are initially not displayed */
+}
+
+.video.active {
+  display: block; /* Active videos are displayed */
+  /* Ensure the active class has a higher specificity than any other style */
+}
+
+.bluebg {
+  background: #001aff;
+}
+
+.bluebg * {
+  color: #fff;
+}
+
+.bluebg .link {
+  border: 1px solid #ffffff;
+}
+
+.bluebg .link:hover {
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.59) inset,
+    0px 7px 7px 0px rgba(0, 0, 0, 0.51) inset,
+    0px 16px 10px 0px rgba(0, 0, 0, 0.3) inset,
+    0px 29px 12px 0px rgba(0, 0, 0, 0.09) inset,
+    0px 45px 13px 0px rgba(0, 0, 0, 0.01) inset;
+}
+
 h4 {
-  color: #121212;
+  color: #001aff;
   font-size: 15px;
   font-style: normal;
   font-weight: 570;
   line-height: 26px; /* 173.333% */
   letter-spacing: 1.35px;
   text-transform: uppercase;
+}
+
+.surround-video-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 569px;
+  z-index: 50;
+}
+
+.video-container {
+  transform: scale(1);
+  transition: transform 0.25s ease-out;
+  border-radius: 16px;
+  box-shadow: 0px 5.479px 3.223px 0px rgba(0, 0, 0, 0.01),
+    0px 13.167px 7.743px 0px rgba(0, 0, 0, 0.02),
+    0px 24.793px 14.355px 0px rgba(0, 0, 0, 0.03),
+    0px 44.226px 24.818px 0px rgba(0, 0, 0, 0.04),
+    0px 82.72px 44.312px 0px rgba(0, 0, 0, 0.05),
+    0px 198px 96px 0px rgba(0, 0, 0, 0.07);
+}
+
+.video-container:hover {
+  transform: scale(1.05);
+  transition: transform 0.25s ease-out;
+}
+
+.blue-bg .work {
+  height: calc(100vh - 100px); /* 100% of the viewport height minus 100px */
+}
+
+.panel {
+  border-right: 1px solid #ffffff;
 }
