--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -73,6 +73,16 @@ body {
     0px 198px 96px 0px rgba(0, 0, 0, 0.07);
 }
 
+.widevideo {
+  border-radius: 12px;
+  box-shadow: 0px 5.479px 3.223px 0px rgba(0, 0, 0, 0.01),
+    0px 13.167px 7.743px 0px rgba(0, 0, 0, 0.02),
+    0px 24.793px 14.355px 0px rgba(0, 0, 0, 0.03),
+    0px 44.226px 24.818px 0px rgba(0, 0, 0, 0.04),
+    0px 82.72px 44.312px 0px rgba(0, 0, 0, 0.05),
+    0px 198px 96px 0px rgba(0, 0, 0, 0.07);
+}
+
 @media (max-width: 768px) {
   .vid {
     border-radius: 16px;
