--- a/src/work.njk
+++ b/src/work.njk
@@ -14,7 +14,7 @@ isFront: true
 Following the systems work, we redesigned how merchants add new sections to their store to make it easier and faster to customize their storefronts.</p>
         </div>
         <div class="w-full pt-8 px-4">
-            <video autoplay muted loop playsinline class="w-full widevideo" id="videotwo" src="../img/SectionEditor.mp4" preload="auto"></video>
+            <video autoplay muted loop playsinline class="w-full widevideo" id="videotwo" src="../img/Editor.mp4" preload="auto"></video>
             <p class="pb-7 pt-8 max-w-screen-sm">Adding sections to a Shopify theme</p>
         </div>
 
@@ -23,9 +23,9 @@ Following the systems work, we redesigned how merchants add new sections to thei
                 2017<br />&mdash; 2020
             </p>
             <h1 class="pt-16 pb-11">Shopify<br />Creative<br />Direction</h1>
-            <p class="pb-7 max-w-screen-sm">The Creative Direction team was made up of design technologists, motion designers, product designers and illustrators. During my time leading the team, I doubled the size of the team from 4 to 8.
+            <p class="pb-7 max-w-screen-sm">The Creative Direction team was made up of design technologists, motion designers, product designers and illustrators.
 
-In 2017 we shipped the first version of Shopify’s design system &#8212; Polaris. Between 2018 and 2020 I led the team through a complete refresh of our design language, and took that work on a roadshow across the company to help setup and enable teams to use the new design language.</p>
+In 2017 we shipped the first version of Shopify’s design system &#8212; Polaris. Between 2018 and 2020 I led the team through a complete refresh of our design language.</p>
         </div>
         <div class="w-full pt-8 px-4">
             <img alt="Frenzy" class="w-full widevideo" src="../img/designlanguage.png">
@@ -37,9 +37,7 @@ In 2017 we shipped the first version of Shopify’s design system &#8212; Polari
                 2016<br />&mdash; 2017
             </p>
             <h1 class="pt-16 pb-11">Frenzy</h1>
-            <p class="pb-7 max-w-screen-sm">he Garage was a purpose built area within Shopify to work on quick, experimental projects. I led a small UX team, and the most noteable project we shipped was Frenzy.
-
-The first version of Frenzy took just 4 months to design, build and ship. Frenzy was one of Shopify’s first consumer products. It allowed merchants to  sell their most hyped products to their biggest fans through limited time flash sales. It was an active project up until 2019, and during that time, it featured sales from some of Shopify’s most exciting merchants.</p>
+            <p class="pb-7 max-w-screen-sm">Frenzy was one of Shopify’s first consumer products. It allowed merchants to  sell their most hyped products to their biggest fans through limited time flash sales.</p>
         </div>
         <div class="w-full pt-8 px-4">
             <img alt="Frenzy" class="w-full widevideo" src="../img/frenzysales.png">
