Updates to Work

--- a/src/work.njk
+++ b/src/work.njk
@@ -14,6 +14,20 @@ isFront: true
 Following the systems work, we redesigned how merchants add new sections to their store to make it easier and faster to customize their storefronts.</p>
         </div>
         <div class="w-full pt-8 px-4">
+            <img alt="Section Picker" class="w-full widevideo" src="../img/sectionpicker.png">
+            <p class="pb-7 pt-8 max-w-screen-sm">Section Picker</p>
+        </div>
+        <div class="flex flex-col md:flex-row py-8">
+            <div class="w-full md:w-1/2 pl-4 pr-8">
+                <img alt="Managing Products" class="w-full widevideo" src="../img/mobileselect.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Pick a Section</p>
+            </div>
+            <div class="w-full md:w-1/2 pl-8 pr-4">
+                <img alt="Managing Customers" class="w-full widevideo" src="../img/mobileadd.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Confirm Section</p>
+            </div>
+        </div>
+        <div class="w-full pt-8 px-4">
             <video autoplay muted loop playsinline class="w-full widevideo" id="videotwo" src="../img/Editor.mp4" preload="auto"></video>
             <p class="pb-7 pt-8 max-w-screen-sm">Adding sections to a Shopify theme</p>
         </div>
@@ -28,8 +42,32 @@ Following the systems work, we redesigned how merchants add new sections to thei
 In 2017 we shipped the first version of Shopify’s design system &#8212; Polaris. Between 2018 and 2020 I led the team through a complete refresh of our design language.</p>
         </div>
         <div class="w-full pt-8 px-4">
-            <img alt="Frenzy" class="w-full widevideo" src="../img/designlanguage.png">
-            <p class="pb-7 pt-8 max-w-screen-sm">Merchants running flash sales on Frenzy</p>
+            <img alt="Login" class="w-full widevideo" src="../img/login.png">
+            <p class="pb-7 pt-8 max-w-screen-sm">Login</p>
+        </div>
+        <div class="flex flex-col md:flex-row py-8">
+            <div class="w-full md:w-1/2 pl-4 pr-8">
+                <img alt="Managing Products" class="w-full widevideo" src="../img/manageproducts.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Managing Products</p>
+            </div>
+            <div class="w-full md:w-1/2 pr-4 pl-8">
+                <img alt="Managing Customers" class="w-full widevideo" src="../img/managecustomers.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Managing Customers</p>
+            </div>
+        </div>
+        <div class="flex flex-col md:flex-row py-8">
+            <div class="w-full sm:w-1/2 pl-4 pr-8">
+                <img alt="Onboarding" class="w-full widevideo" src="../img/mobilehome1.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Onboarding</p>
+            </div>
+            <div class="w-full sm:w-1/2 pr-4 pl-8">
+                <img alt="Home" class="w-full widevideo" src="../img/mobilehome2.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Home</p>
+            </div>
+        </div>
+        <div class="w-full py-8 px-4">
+            <img alt="Login" class="w-full widevideo" src="../img/pricing.png">
+            <p class="pb-7 pt-8 max-w-screen-sm">Pricing</p>
         </div>
 
         <div class="w-full px-4 mb-4">
@@ -39,10 +77,19 @@ In 2017 we shipped the first version of Shopify’s design system &#8212; Polari
             <h1 class="pt-16 pb-11">Frenzy</h1>
             <p class="pb-7 max-w-screen-sm">Frenzy was one of Shopify’s first consumer products. It allowed merchants to  sell their most hyped products to their biggest fans through limited time flash sales.</p>
         </div>
-        <div class="w-full pt-8 px-4">
-            <img alt="Frenzy" class="w-full widevideo" src="../img/frenzysales.png">
-            <p class="pb-7 pt-8 max-w-screen-sm">Merchants running flash sales on Frenzy</p>
+
+        <div class="flex flex-col md:flex-row py-8">
+            <div class="w-full sm:w-1/2 pl-4 pr-8">
+                <img alt="Frenzy" class="w-full widevideo" src="../img/frenzyhome.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Frenzy Home</p>
+            </div>
+            <div class="w-full sm:w-1/2 pr-4 pl-8">
+                <video autoplay muted loop playsinline class="w-full widevideo" id="videothree" src="../img/frenzyvid.mp4" preload="auto"></video>
+            <p class="pb-7 pt-8 max-w-screen-sm">Frenzy Walkthrough</p>
+            </div>
         </div>
+
+
     </div>
 </div>
 
